[gd_scene load_steps=12 format=3 uid="uid://ms4xxcwnc6ka"]

[ext_resource type="PackedScene" uid="uid://bv87orrgq5ha8" path="res://Cards/Spawns/Asset/asset.tscn" id="1_i7cdv"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/artillery.gd" id="2_ddlk2"]
[ext_resource type="Texture2D" uid="uid://biwol7d2yn7d7" path="res://Cards/Spawns/Asset/Images/gun.png" id="3_0c4mk"]
[ext_resource type="Texture2D" uid="uid://diqnboewtvctv" path="res://Cards/Spawns/Asset/Images/bullet.png" id="3_lgo2b"]
[ext_resource type="Script" path="res://Cards/Spawns/Asset/Bullet.gd" id="3_xihw1"]
[ext_resource type="AudioStream" uid="uid://bvxvjxf2278x2" path="res://Audio/bullet.wav" id="5_02p3g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2n30"]
radius = 3.33333
height = 16.0

[sub_resource type="Animation" id="Animation_18vo8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_0hmmk"]
resource_name = "shoot"
length = 1.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx5sq"]
_data = {
"RESET": SubResource("Animation_18vo8"),
"shoot": SubResource("Animation_0hmmk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dlwuc"]
size = Vector2(197, 117)

[node name="Artillery" instance=ExtResource("1_i7cdv")]
script = ExtResource("2_ddlk2")

[node name="Bullet" type="AnimatableBody2D" parent="." index="0" node_paths=PackedStringArray("audio")]
visible = false
position = Vector2(1, -89)
scale = Vector2(1.5, 1.5)
collision_layer = 0
collision_mask = 16
sync_to_physics = false
script = ExtResource("3_xihw1")
audio = NodePath("AudioStreamPlayer2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet" index="0"]
rotation = 1.5708
scale = Vector2(2.3, 2.3)
shape = SubResource("CapsuleShape2D_g2n30")

[node name="Sprite2D" type="Sprite2D" parent="Bullet" index="1"]
texture = ExtResource("3_lgo2b")
hframes = 16

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Bullet" index="2"]
stream = ExtResource("5_02p3g")
volume_db = -4.315
max_distance = 1000.0
attenuation = 2.0
panning_strength = 3.0
bus = &"TableSounds"

[node name="BulletSpawn" type="Node2D" parent="." index="1"]
position = Vector2(0, -89)
scale = Vector2(1.5, 1.5)

[node name="Sprite2D" parent="." index="2"]
position = Vector2(0, -38)
scale = Vector2(3, 3)
texture = ExtResource("3_0c4mk")
hframes = 3
vframes = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
libraries = {
"": SubResource("AnimationLibrary_tx5sq")
}

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2(6, 70)
shape = SubResource("RectangleShape2D_dlwuc")

[connection signal="frame_changed" from="Sprite2D" to="." method="_on_sprite_2d_frame_changed"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
